--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,7 @@
     		<fileset dir="./reports/raw">
         	<include name="TEST-*.xml"/>
     		</fileset>
-    		<report format="frames" todir="./report/html"/>
+    		<report format="frames" todir="./reports/html"/>
 	</junitreport>
 </target>
 	
